fix update My Account menu on mobile logic

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -883,6 +883,9 @@ header .side-menu .inner-side ul li .list-menu__item {
     .form-group.empty {
         display: none;
     }
+    header .side-menu .inner-side ul li .list-menu__item.account {
+        display: none;
+    }
 }
 
 @media (min-width: 768px) {
